# Outerbridge

./: Cargo.toml  README.md
config/: display_config.ron  input_config.ron
resources/terrain/: grass.ron  monster.ron  player.ron
src/: main.rs
src/entities/: fov.rs  mod.rs  terrain.rs  tile.rs
src/resources/: atlas.rs  mod.rs  sprite.rs
src/states/: boot.rs  game.rs  mod.rs
src/systems/: custom_input.rs  follow.rs  mod.rs  movement.rs  visibility.rs
src/utils/: basemap.rs  bresenham_circle.rs  mod.rs
